# L552ZE_LWC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
crypto/: CMakeLists.txt
crypto/aes/: CMakeLists.txt  aes_test.c  aes_test.h
crypto/clefia/: CMakeLists.txt  clefia_test.c  clefia_test.h
crypto/enocoro/: CMakeLists.txt  enocoro_test.c  enocoro_test.h
crypto/lea/: CMakeLists.txt  lea_cbc.h  lea_test.c  lea_test.h
crypto/present/: CMakeLists.txt  present.h  test_present.c  test_present.h
crypto/trivium/: CMakeLists.txt  trivium_test.c  trivium_test.h
util/: util.h
